# ferrix

./: .gitignore  .goreleaser.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.sarif  mise.toml
.buildkite/: pipeline.yml
.config/: nextest.toml
.devcontainer/: devcontainer.json  post-create.sh
src/: agent.rs  config.rs  logging.rs  main.rs  mcp.rs  model.rs  runs.rs  terminal.rs  tools.rs
src/tools/: bash.rs  fs.rs
