[package]
name = "ferrix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.41.1", features = ["responses"] }
futures-util = "0.3.32"
jsonschema = "0.46.5"
rmcp = { version = "1.7.0", default-features = false, features = ["client", "transport-child-process"] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "process", "rt-multi-thread", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.2", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
